EPBDS-5915 Update Java opts in OpenL demo